did some changes in homepage

--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
         <button>View Portfolio</button>
       </div>
     </div>
-    <div class="schedule_button_div">
-      <span><i class="fa-solid fa-list"></i> Get Your free Roofing Inspection</span>
-      <button>Schedule Now</button>
-    </div>
+  </div>
+
+  <!-- SCHEDULE - BUTTON - DIV  -->
+  <div class="schedule_button_div">
+    <span><i class="fa-solid fa-list"></i> Get Your free Roofing Inspection</span>
+    <button>Schedule Now</button>
   </div>
 
   <!-- navbar -->
@@ -152,6 +154,8 @@
       </div>
     </section>
 
+
+
     <section class="journey-section">
       <div class="journey-content">
         <div class="text-content">
@@ -187,6 +191,7 @@
           <button type="submit">Get Estimate</button>
         </form>
       </div>
+      <img src="assets/images/input-image.jpg" alt="">
     </section>
 
     <!-- services section -->
