did some changes in hero section, footer and achievment section

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 
       <div class="achievment_section-card">
         <div class="head">
-          <div class="image"><img src="assets/small_icons/badge.png" width="40" alt="normal badge"></div>
+          <div class="image"><img src="assets/small_icons/badge.png" width="45" alt="normal badge"></div>
           <h3>Award-Winning Staff</h3>
         </div>
         <p>
@@ -364,7 +364,7 @@
 
       <div class="achievment_section-card">
         <div class="head">
-          <div class="image"><img src="assets/small_icons/three-star.png" width="40" alt="stars badge"></div>
+          <div class="image"><img src="assets/small_icons/three-star.png" width="45" alt="stars badge"></div>
           <h3>Decades Of Experience</h3>
         </div>
         <p>
@@ -374,7 +374,7 @@
 
       <div class="achievment_section-card">
         <div class="head">
-          <div class="image"><img src="assets/small_icons/location.png" width="40" alt="location sign"></div>
+          <div class="image"><img src="assets/small_icons/location.png" width="45" alt="location sign"></div>
           <h3>Local Ownership</h3>
         </div>
         <p>
@@ -384,7 +384,7 @@
 
       <div class="achievment_section-card">
         <div class="head">
-          <div class="image"><img src="assets/small_icons/tickmark.png" width="40" alt="tickmark sign"></div>
+          <div class="image"><img src="assets/small_icons/tickmark.png" width="45" alt="tickmark sign"></div>
           <h3>Trusted Products</h3>
         </div>
         <p>
@@ -394,7 +394,7 @@
 
       <div class="achievment_section-card">
         <div class="head">
-          <div class="image"><img src="assets/small_icons/magnifying-glass.png" width="40" alt="search sign"></div>
+          <div class="image"><img src="assets/small_icons/magnifying-glass.png" width="45" alt="search sign"></div>
           <h3>Free Root Inspection</h3>
         </div>
         <p>
@@ -437,8 +437,8 @@
 
         <div class="small_container">
           <div class="call">
-            <span><i class="fa-solid fa-phone fa-2x"></i></span>
-            <span>
+            <span class="icon"><i class="fa-solid fa-phone fa-2x"></i></span>
+            <span class="info">
               <span class="small_heading">Give us a call</span>
               <span>(000) 666 555 444</span>
             </span>
@@ -446,8 +446,8 @@
 
 
           <div class="email">
-            <span><i class="fa-solid fa-envelope fa-2x"></i></span>
-            <span>
+            <span class="icon"><i class="fa-solid fa-envelope fa-2x"></i></span>
+            <span class="info">
               <span class="small_heading">Send us an email</span>
               <span>info@qualityrestoration.com</span>
             </span>
@@ -455,8 +455,8 @@
 
 
           <div class="location">
-            <span><i class="fa-solid fa-location-dot fa-2x"></i></span>
-            <span>
+            <span class="icon"><i class="fa-solid fa-location-dot fa-2x"></i></span>
+            <span class="info">
               <span class="small_heading">Visit us in person</span>
               <span>OurStreet 1257/18, OurCity</span>
             </span>
