add responsiveness in work page

--- a/work.html
+++ b/work.html
@@ -28,20 +28,17 @@
   <!-- <<<<<<<<<<<< NAVBAR - SECTION  >>>>>>>>>>>> -->
 
   <nav>
-    <a class="logo" href="index.html">
-      <img src="assets/aboutPage_images/logo.webp" width="100" alt="nav logo" class="js-logo-work" />
+    <a href="index.html">
+      <img src="assets/images/logo.webp" loading="lazy" width="100" alt="logo" class="logo js-logo-home" />
     </a>
-
-    <div class="nav_links">
+    <div>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="work.html" class="bold">Our Work</a></li>
         <li><a href="contact.html">Contact Us</a></li>
       </ul>
-      <span>
-        <i class="fa-solid fa-phone"></i> 330-636-7808
-      </span>
+      <span><i class="fa-solid fa-phone"></i> 330-636-7808</span>
     </div>
     <svg xmlns="http://www.w3.org/2000/svg" class="nav-icon js-nav-icon" width="40" height="30" viewBox="0 0 22 16"
       fill="none">
@@ -176,171 +173,173 @@
   <!-- <<<<<<<<<<<< section of input field >>>>>>>>>>>> -->
 
   <section class="estimate-section">
-    <div class="estimate-container">
-      <div class="estimate-text">
-        <h3>Get Your Free Estimate</h3>
-        <p>Lorem ipsum dolor sit amet consectetur.</p>
+      <div class="estimate-container">
+        <div class="estimate-text">
+          <h3>Get Your Free Estimate</h3>
+          <p>Lorem ipsum dolor sit amet consectetur.</p>
+        </div>
+        <form class="estimate-form">
+          <input type="text" placeholder="Enter Zip Code" />
+          <button type="submit">Get Estimate</button>
+        </form>
       </div>
-      <form class="estimate-form">
-        <input type="text" placeholder="Enter Zip Code" />
-        <button type="submit">Get Estimate</button>
-      </form>
-    </div>
-  </section>
+      <img src="assets/images/input-image.jpg" alt="">
+    </section>
+
 
   <!-- services section -->
 
   <section class="services">
-    <div class="heading">
-      <p>Testimonials</p>
-      <h1>Satisfied With Our Service</h1>
-      <p>How they respond to the results of the work we do for them, let’s we know</p>
-    </div>
-    <div class="cards-container">
-      <div class="card-small-container">
-        <div class="card">
-          <div class="info">
-            <div class="worker-credential">
-              <div class="image">
-                <img src="assets/images/male-worker.jpg" width="50" alt="person image">
+      <div class="heading">
+        <p>Testimonials</p>
+        <h1>Satisfied With Our Service</h1>
+        <p>How they respond to the results of the work we do for them, let’s we know</p>
+      </div>
+      <div class="cards-container">
+        <div class="card-small-container">
+          <div class="card">
+            <div class="info">
+              <div class="worker-credential">
+                <div class="image">
+                  <img src="assets/images/male-worker.jpg" width="50" alt="person image">
+                </div>
+                <div class="name">
+                  <span>
+                    <h4>Chloe Williams</h4>
+                  </span>
+                  <span>Consectetuer adipiscing</span>
+                </div>
               </div>
-              <div class="name">
-                <span>
-                  <h4>Chloe Williams</h4>
-                </span>
-                <span>Consectetuer adipiscing</span>
-              </div>
+              <img src="assets/small_icons/quote.png" alt="">
             </div>
-            <img src="assets/small_icons/quote.png" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cras elementum. </p>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cras elementum. </p>
+          <div class="card">
+            <div class="info">
+              <div class="worker-credential">
+                <div class="image">
+                  <img src="assets/images/man-with-mountains.jpg" width="50" alt="person image">
+                </div>
+                <div class="name">
+                  <span>
+                    <h4>Chloe Williams</h4>
+                  </span>
+                  <span>Consectetuer adipiscing</span>
+                </div>
+              </div>
+              <img src="assets/small_icons/quote.png" alt="">
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cras elementum. </p>
+          </div>
+          <div class="card">
+            <div class="info">
+              <div class="worker-credential">
+                <div class="image">
+                  <img src="assets/images/women.jpg" width="50" alt="person image">
+                </div>
+                <div class="name">
+                  <span>
+                    <h4>Chloe Williams</h4>
+                  </span>
+                  <span>Consectetuer adipiscing</span>
+                </div>
+              </div>
+              <img src="assets/small_icons/quote.png" alt="">
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cras elementum. </p>
+          </div>
+          <div class="card">
+            <div class="info">
+              <div class="worker-credential">
+                <div class="image">
+                  <img src="assets/images/male-worker.jpg" width="50" alt="person image">
+                </div>
+                <div class="name">
+                  <span>
+                    <h4>Chloe Williams</h4>
+                  </span>
+                  <span>Consectetuer adipiscing</span>
+                </div>
+              </div>
+              <img src="assets/small_icons/quote.png" alt="">
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cras elementum. </p>
+          </div>
         </div>
-        <div class="card">
-          <div class="info">
-            <div class="worker-credential">
-              <div class="image">
-                <img src="assets/images/man-with-mountains.jpg" width="50" alt="person image">
+
+        <div class="card-small-container">
+
+          <div class="card">
+            <div class="info">
+              <div class="worker-credential">
+                <div class="image">
+                  <img src="assets/images/man-with-mountains.jpg" width="50" alt="person image">
+                </div>
+                <div class="name">
+                  <span>
+                    <h4>Chloe Williams</h4>
+                  </span>
+                  <span>Consectetuer adipiscing</span>
+                </div>
               </div>
-              <div class="name">
-                <span>
-                  <h4>Chloe Williams</h4>
-                </span>
-                <span>Consectetuer adipiscing</span>
-              </div>
+              <img src="assets/small_icons/quote.png" alt="">
             </div>
-            <img src="assets/small_icons/quote.png" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cras elementum. </p>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cras elementum. </p>
-        </div>
-        <div class="card">
-          <div class="info">
-            <div class="worker-credential">
-              <div class="image">
-                <img src="assets/images/women.jpg" width="50" alt="person image">
+          <div class="card">
+            <div class="info">
+              <div class="worker-credential">
+                <div class="image">
+                  <img src="assets/images/male-worker.jpg" width="50" alt="person image">
+                </div>
+                <div class="name">
+                  <span>
+                    <h4>Chloe Williams</h4>
+                  </span>
+                  <span>Consectetuer adipiscing</span>
+                </div>
               </div>
-              <div class="name">
-                <span>
-                  <h4>Chloe Williams</h4>
-                </span>
-                <span>Consectetuer adipiscing</span>
-              </div>
+              <img src="assets/small_icons/quote.png" alt="">
             </div>
-            <img src="assets/small_icons/quote.png" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cras elementum. </p>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cras elementum. </p>
-        </div>
-        <div class="card">
-          <div class="info">
-            <div class="worker-credential">
-              <div class="image">
-                <img src="assets/images/male-worker.jpg" width="50" alt="person image">
+          <div class="card">
+            <div class="info">
+              <div class="worker-credential">
+                <div class="image">
+                  <img src="assets/images/women.jpg" width="50" alt="person image">
+                </div>
+                <div class="name">
+                  <span>
+                    <h4>Chloe Williams</h4>
+                  </span>
+                  <span>Consectetuer adipiscing</span>
+                </div>
               </div>
-              <div class="name">
-                <span>
-                  <h4>Chloe Williams</h4>
-                </span>
-                <span>Consectetuer adipiscing</span>
-              </div>
+              <img src="assets/small_icons/quote.png" alt="">
             </div>
-            <img src="assets/small_icons/quote.png" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cras elementum. </p>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cras elementum. </p>
+          <div class="card">
+            <div class="info">
+              <div class="worker-credential">
+                <div class="image">
+                  <img src="assets/images/male-worker.jpg" width="50" alt="person image">
+                </div>
+                <div class="name">
+                  <span>
+                    <h4>Chloe Williams</h4>
+                  </span>
+                  <span>Consectetuer adipiscing</span>
+                </div>
+              </div>
+              <img src="assets/small_icons/quote.png" alt="">
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cras elementum. </p>
+          </div>
         </div>
       </div>
-
-      <div class="card-small-container">
-
-        <div class="card">
-          <div class="info">
-            <div class="worker-credential">
-              <div class="image">
-                <img src="assets/images/man-with-mountains.jpg" width="50" alt="person image">
-              </div>
-              <div class="name">
-                <span>
-                  <h4>Chloe Williams</h4>
-                </span>
-                <span>Consectetuer adipiscing</span>
-              </div>
-            </div>
-            <img src="assets/small_icons/quote.png" alt="">
-          </div>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cras elementum. </p>
-        </div>
-        <div class="card">
-          <div class="info">
-            <div class="worker-credential">
-              <div class="image">
-                <img src="assets/images/male-worker.jpg" width="50" alt="person image">
-              </div>
-              <div class="name">
-                <span>
-                  <h4>Chloe Williams</h4>
-                </span>
-                <span>Consectetuer adipiscing</span>
-              </div>
-            </div>
-            <img src="assets/small_icons/quote.png" alt="">
-          </div>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cras elementum. </p>
-        </div>
-        <div class="card">
-          <div class="info">
-            <div class="worker-credential">
-              <div class="image">
-                <img src="assets/images/women.jpg" width="50" alt="person image">
-              </div>
-              <div class="name">
-                <span>
-                  <h4>Chloe Williams</h4>
-                </span>
-                <span>Consectetuer adipiscing</span>
-              </div>
-            </div>
-            <img src="assets/small_icons/quote.png" alt="">
-          </div>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cras elementum. </p>
-        </div>
-        <div class="card">
-          <div class="info">
-            <div class="worker-credential">
-              <div class="image">
-                <img src="assets/images/male-worker.jpg" width="50" alt="person image">
-              </div>
-              <div class="name">
-                <span>
-                  <h4>Chloe Williams</h4>
-                </span>
-                <span>Consectetuer adipiscing</span>
-              </div>
-            </div>
-            <img src="assets/small_icons/quote.png" alt="">
-          </div>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cras elementum. </p>
-        </div>
-      </div>
-    </div>
-  </section>
+    </section>
 
   <!-- ---- FOOTER ---- -->
 
@@ -375,8 +374,8 @@
 
         <div class="small_container">
           <div class="call">
-            <span><i class="fa-solid fa-phone fa-2x"></i></span>
-            <span>
+            <span class="icon"><i class="fa-solid fa-phone fa-2x"></i></span>
+            <span class="info">
               <span class="small_heading">Give us a call</span>
               <span>(000) 666 555 444</span>
             </span>
@@ -384,8 +383,8 @@
 
 
           <div class="email">
-            <span><i class="fa-solid fa-envelope fa-2x"></i></span>
-            <span>
+            <span class="icon"><i class="fa-solid fa-envelope fa-2x"></i></span>
+            <span class="info">
               <span class="small_heading">Send us an email</span>
               <span>info@qualityrestoration.com</span>
             </span>
@@ -393,8 +392,8 @@
 
 
           <div class="location">
-            <span><i class="fa-solid fa-location-dot fa-2x"></i></span>
-            <span>
+            <span class="icon"><i class="fa-solid fa-location-dot fa-2x"></i></span>
+            <span class="info">
               <span class="small_heading">Visit us in person</span>
               <span>OurStreet 1257/18, OurCity</span>
             </span>
